--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-dark-5": "^1.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express-validator": "^6.14.0",
     "jspdf": "^2.5.1",
     "modal": "^1.2.0",
